# VaultCompass

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMMIT_POLICY.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PULL_REQUEST_POLICY.md  README.md  biome.json  codecov.yml  common.just  index.html  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/.sqlx/: query-00bfafe62765d88976b02d08595556918297d5d3c900971e58cf9949adcfcd99.json  query-0256a098c506e1b40aa1f90ace42530ef24efba29b1695ec95e1fd82ee996748.json  query-04502e5b60526246bf0c6c14269e67a2474b24ed8d1db2c6a5b1305bf6488043.json  query-0509ab78b594db3dc27fb90c221fc7e4a3047083efb6dfbb7f3ab04d27bd2e8b.json  query-058a864abc2fe161bb519de28d66a171dafd7cf53189adf7ebd5945b2d03d5df.json  query-1018f3af99b6b2fbaca5586a0815efcfd90d9632f86489669b26327e7f0fa84e.json  query-10b847504692a7fdd5549f2f33f522c3cebd74cbbe061e72291c1f5410dcfcad.json  query-113a670b5d01333ad95c168343869f561e5b6782c5e237cea22688e8a3818736.json  query-1690a61ace989c18d16af1dab428be22a82f8b80d870e5660b15b900b4b865dd.json  query-17ffaa3b1e2101b7adf5096cfc76c13de557e3aee9744298c680c364a9f76222.json  query-18274a46f56d5ac127b5628b46e1bcf619c8156ec73af77711721f5bdb7600b1.json  query-1fa0e10a711f19b2b45cfc4b7be0cbee4c3aa1b97bbfdb307dec374659af7401.json  query-2109323092c178fd8772ddee3f97b4c064dd278bbaaf0f4a486ca27849c74561.json  query-217f37137ae561d8d1f4812b79a590c4712773176a08806646d64cfe3afa451c.json  query-28858c8898205ec741361c6f8d1f909978d16100186da7fc2883b3b639e1b9cd.json  query-2b8f50879dde9a4c9ade516580863d861b24bd363d8e6e06746d7783eef1058b.json  query-2bea2627a43e54e89f529f62538dbaa7216e447694c5501557a83b3f167a9941.json  query-2f4621af7ab1b2578b2f6aa87d4dc504aa7af76cce60b24bab5c49492d978f85.json  query-34c177a9b1028abdf11607553200fdb64e4767f21b725a2198f26f9fe1562b29.json  query-34d5ea584502eb003dfdff92273e0e7e72bd177ac656795e5aee0be60130648f.json  query-3ab68569bdbbbf0c006f98b95bacd94325ca7c34f00deec1b55d8df06a7e26ae.json  query-4567a2c0aaa5570c08f8e018bd49d3a2063a09dd5441735938257c63edc0ea52.json  query-45f5b87c955887c96eddcd8b4a5c592cf32a90d7f738bcfea2f57e75fe1e674b.json  query-4b5d51d74f4f8e9ef45f3a220e4480b1d23730d96f1948a0fe169ac84ad4a379.json  query-4cf9a258029613b98a873e346f2b9d214890ecfa230f40c9743d8262690797a3.json  query-4cfb916e07b64d7ec55691f1410a9497e5e64cde1e36dcba356ded72be43a4b3.json  query-517f4a4867df4b452fee8ae2536e0c76f27a9bbf80409f5f07727e517a5d6de6.json  query-518df9eacac46576e9c37933b5379969dec5e044083faaa55a809046ab190fa8.json  query-54bd59e24454d8dff4fdede2c73a141802bb3600d0042b8b94aba72e2fa6426c.json  query-5ab79189ddd618eaf661245b27724465b03c477bfb354a416f2682680e8a625a.json  query-5bf7bc66c8431e02bd8e0db87402677ff9b8697b9782826ad201dcd2fdcd54af.json  query-5c05a111eebd78d979fd537eead6c9f2475c975bc9d90bc843f9033252e405f6.json  query-5dbad85f759248be7edcc0e9dbea25a118000003f2906e0723726943977b8f62.json  query-68755451be6db954c6648d4b2a905f27b587c7b9224e00d4bb56aeff32614286.json  query-6e51a8c85d1055dcae4d6e1ee65da1442234a2ccd6e803375da06f5ce97c7126.json  query-702fed3c31a4ece7af722a7fcb8b0c083b4f43c44be3dbfc410cbe09b9573f2f.json  query-71aef2be12344ef211f1684e3f6cf178ac8658708499d2b18290773c02b4e719.json  query-749445258cbf0711d65aff4d01fd39c6252d2773af910cf35330dd2032b917b5.json  query-76a620f6b3049227f5a4fcf5da3fb379d0459f03e658b336137659da4fd0f89e.json  query-7c617e78e404fcec1ef41a92fe2096e0898363a874bffcadedb91eec790ecf18.json  (+40 more)
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 202602080000_init.sql  202603280001_categories_case_insensitive.sql  202603290001_asset_archiving.sql  202604040001_accounts_constraints.sql  202604120001_replace_asset_accounts_with_holdings.sql  202604120002_create_transactions.sql  202604160001_drop_asset_prices.sql  202604190001_add_realized_pnl_and_created_at_to_transactions.sql  202604250001_add_currency_to_accounts.sql  202604250002_add_last_sold_date_and_total_realized_pnl_to_holdings.sql  202604260001_create_asset_prices.sql  (+2 more)
src-tauri/src/: lib.rs  (+1 more)
(+428 files in other folders)
