[package]
name = "vault-compass"
version = "0.5.0"
description = "A Tauri App"
authors = ["Phil Eggel"]
license = "MIT"
edition = "2021"
rust-version = "1.90"
default-run = "tauri-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vault_compass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "generate_bindings"
path = "src/bin/generate_bindings.rs"

[[bin]]
name = "tauri-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }
specta = { version = "2.0.0-rc.22", features = ["derive"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["javascript", "typescript", "derive"] }
specta-typescript = "0.0.9"
async-trait = "0.1.89"
anyhow = "1.0.101"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2.10.0"
iso_currency = "0.5.3"
strum = "0.27.2"
strum_macros = "0.27.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true
